# security-agency

./: .gitignore  .pylintrc  .todo.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  K8S_JOBS_INVESTIGATION_PLAN.md  Makefile  PHASE_2_INDEX.md  PHASE_2_QUICKSTART.md  PHASE_2_ROADMAP.md  PHASE_2_SUMMARY.md  README.md  app.py  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: phase2-feature.yml
.github/phase2-issues/: SUB_ISSUES.md
.github/workflows/: build-and-push.yml  ci.yml
agents/: base_agent.py  dirb_agent.py  nikto_agent.py  nmap_agent.py  sqlmap_agent.py  sublist3r_agent.py  wpscan_agent.py
core/: decision_engine.py  event_queue.py  job_manager.py  k8s_job_runner.py  models.py  orchestrator.py  recommendation_engine.py  storage.py  utils.py
frontend/: index.html
scripts/: poll_k8s_jobs.py
tests/: test_api.py  test_history.py  test_k8s_jobs.py  test_recommendations.py  test_routes.py  test_workflows.py
