[tool.poetry]
name = "security-scanner"
version = "0.1.0"
description = "A Flask-based security scanner integrating nmap, nikto, and sqlmap"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "core" }, { include = "agents" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.0.0"
pydantic = "^2.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
psycopg2-binary = "^2.9.0"
sqlalchemy = "^2.0.0"
kubernetes = "^30.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pylint = "^3.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:app"
